--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -6,4 +8,1006 @@
 
 html {
   font-size: 10px;
+  line-height: 1.7;
+  font-family: "Be Vietnam Pro", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.text-primary {
+  color: #f25f3a;
+}
+
+.text-hover-primary:hover {
+  color: #f25f3a;
+}
+
+.bg-primary {
+  background-color: #f25f3a;
+}
+
+.text-primary-light-1 {
+  color: #f36f4e;
+}
+
+.text-hover-primary-light-1:hover {
+  color: #f36f4e;
+}
+
+.bg-primary-light-1 {
+  background-color: #f36f4e;
+}
+
+.bg-hover-primary-light-1:hover {
+  background-color: #f36f4e;
+}
+
+.text-primary-light-2 {
+  color: #f57f61;
+}
+
+.text-hover-primary-light-2:hover {
+  color: #f57f61;
+}
+
+.bg-primary-light-2 {
+  background-color: #f57f61;
+}
+
+.bg-hover-primary-light-2:hover {
+  background-color: #f57f61;
+}
+
+.text-primary-light-3 {
+  color: #f68f75;
+}
+
+.text-hover-primary-light-3:hover {
+  color: #f68f75;
+}
+
+.bg-primary-light-3 {
+  background-color: #f68f75;
+}
+
+.bg-hover-primary-light-3:hover {
+  background-color: #f68f75;
+}
+
+.text-primary-light-4 {
+  color: #f79f89;
+}
+
+.text-hover-primary-light-4:hover {
+  color: #f79f89;
+}
+
+.bg-primary-light-4 {
+  background-color: #f79f89;
+}
+
+.bg-hover-primary-light-4:hover {
+  background-color: #f79f89;
+}
+
+.text-primary-light-5 {
+  color: #f9af9d;
+}
+
+.text-hover-primary-light-5:hover {
+  color: #f9af9d;
+}
+
+.bg-primary-light-5 {
+  background-color: #f9af9d;
+}
+
+.bg-hover-primary-light-5:hover {
+  background-color: #f9af9d;
+}
+
+.text-primary-light-6 {
+  color: #fabfb0;
+}
+
+.text-hover-primary-light-6:hover {
+  color: #fabfb0;
+}
+
+.bg-primary-light-6 {
+  background-color: #fabfb0;
+}
+
+.bg-hover-primary-light-6:hover {
+  background-color: #fabfb0;
+}
+
+.text-primary-light-7 {
+  color: #fbcfc4;
+}
+
+.text-hover-primary-light-7:hover {
+  color: #fbcfc4;
+}
+
+.bg-primary-light-7 {
+  background-color: #fbcfc4;
+}
+
+.bg-hover-primary-light-7:hover {
+  background-color: #fbcfc4;
+}
+
+.text-primary-light-8 {
+  color: #fcdfd8;
+}
+
+.text-hover-primary-light-8:hover {
+  color: #fcdfd8;
+}
+
+.bg-primary-light-8 {
+  background-color: #fcdfd8;
+}
+
+.bg-hover-primary-light-8:hover {
+  background-color: #fcdfd8;
+}
+
+.text-primary-light-9 {
+  color: #feefeb;
+}
+
+.text-hover-primary-light-9:hover {
+  color: #feefeb;
+}
+
+.bg-primary-light-9 {
+  background-color: #feefeb;
+}
+
+.bg-hover-primary-light-9:hover {
+  background-color: #feefeb;
+}
+
+.text-secondary {
+  color: #242d52;
+}
+
+.text-hover-secondary:hover {
+  color: #242d52;
+}
+
+.bg-secondary {
+  background-color: #242d52;
+}
+
+.text-secondary-light-1 {
+  color: #3a4263;
+}
+
+.text-hover-secondary-light-1:hover {
+  color: #3a4263;
+}
+
+.bg-secondary-light-1 {
+  background-color: #3a4263;
+}
+
+.bg-hover-secondary-light-1:hover {
+  background-color: #3a4263;
+}
+
+.text-secondary-light-2 {
+  color: #505775;
+}
+
+.text-hover-secondary-light-2:hover {
+  color: #505775;
+}
+
+.bg-secondary-light-2 {
+  background-color: #505775;
+}
+
+.bg-hover-secondary-light-2:hover {
+  background-color: #505775;
+}
+
+.text-secondary-light-3 {
+  color: #666c86;
+}
+
+.text-hover-secondary-light-3:hover {
+  color: #666c86;
+}
+
+.bg-secondary-light-3 {
+  background-color: #666c86;
+}
+
+.bg-hover-secondary-light-3:hover {
+  background-color: #666c86;
+}
+
+.text-secondary-light-4 {
+  color: #7c8197;
+}
+
+.text-hover-secondary-light-4:hover {
+  color: #7c8197;
+}
+
+.bg-secondary-light-4 {
+  background-color: #7c8197;
+}
+
+.bg-hover-secondary-light-4:hover {
+  background-color: #7c8197;
+}
+
+.text-secondary-light-5 {
+  color: #9296a9;
+}
+
+.text-hover-secondary-light-5:hover {
+  color: #9296a9;
+}
+
+.bg-secondary-light-5 {
+  background-color: #9296a9;
+}
+
+.bg-hover-secondary-light-5:hover {
+  background-color: #9296a9;
+}
+
+.text-secondary-light-6 {
+  color: #a7abba;
+}
+
+.text-hover-secondary-light-6:hover {
+  color: #a7abba;
+}
+
+.bg-secondary-light-6 {
+  background-color: #a7abba;
+}
+
+.bg-hover-secondary-light-6:hover {
+  background-color: #a7abba;
+}
+
+.text-secondary-light-7 {
+  color: #bdc0cb;
+}
+
+.text-hover-secondary-light-7:hover {
+  color: #bdc0cb;
+}
+
+.bg-secondary-light-7 {
+  background-color: #bdc0cb;
+}
+
+.bg-hover-secondary-light-7:hover {
+  background-color: #bdc0cb;
+}
+
+.text-secondary-light-8 {
+  color: #d3d5dc;
+}
+
+.text-hover-secondary-light-8:hover {
+  color: #d3d5dc;
+}
+
+.bg-secondary-light-8 {
+  background-color: #d3d5dc;
+}
+
+.bg-hover-secondary-light-8:hover {
+  background-color: #d3d5dc;
+}
+
+.text-secondary-light-9 {
+  color: #e9eaee;
+}
+
+.text-hover-secondary-light-9:hover {
+  color: #e9eaee;
+}
+
+.bg-secondary-light-9 {
+  background-color: #e9eaee;
+}
+
+.bg-hover-secondary-light-9:hover {
+  background-color: #e9eaee;
+}
+
+.text-white {
+  color: white;
+}
+
+.text-hover-white:hover {
+  color: white;
+}
+
+.bg-white {
+  background-color: white;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.row {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.justify-space-around {
+  justify-content: space-around;
+}
+
+.align-center {
+  align-content: center;
+}
+
+.align-space-between {
+  align-content: space-between;
+}
+
+.align-space-around {
+  align-content: space-around;
+}
+
+.align-item-center {
+  align-items: center;
+}
+
+.align-item-baseline {
+  align-items: baseline;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+@media (min-width: 375px) {
+  .col-1-sm {
+    flex-grow: 0;
+    width: 8.3333333333%;
+  }
+
+  .col-2-sm {
+    flex-grow: 0;
+    width: 16.6666666667%;
+  }
+
+  .col-3-sm {
+    flex-grow: 0;
+    width: 25%;
+  }
+
+  .col-4-sm {
+    flex-grow: 0;
+    width: 33.3333333333%;
+  }
+
+  .col-5-sm {
+    flex-grow: 0;
+    width: 41.6666666667%;
+  }
+
+  .col-6-sm {
+    flex-grow: 0;
+    width: 50%;
+  }
+
+  .col-7-sm {
+    flex-grow: 0;
+    width: 58.3333333333%;
+  }
+
+  .col-8-sm {
+    flex-grow: 0;
+    width: 66.6666666667%;
+  }
+
+  .col-9-sm {
+    flex-grow: 0;
+    width: 75%;
+  }
+
+  .col-10-sm {
+    flex-grow: 0;
+    width: 83.3333333333%;
+  }
+
+  .col-11-sm {
+    flex-grow: 0;
+    width: 91.6666666667%;
+  }
+
+  .col-12-sm {
+    flex-grow: 0;
+    width: 100%;
+  }
+}
+
+@media (min-width: 765px) {
+  .col-1-sm {
+    flex-grow: 0;
+    width: 8.3333333333%;
+  }
+
+  .col-2-sm {
+    flex-grow: 0;
+    width: 16.6666666667%;
+  }
+
+  .col-3-sm {
+    flex-grow: 0;
+    width: 25%;
+  }
+
+  .col-4-sm {
+    flex-grow: 0;
+    width: 33.3333333333%;
+  }
+
+  .col-5-sm {
+    flex-grow: 0;
+    width: 41.6666666667%;
+  }
+
+  .col-6-sm {
+    flex-grow: 0;
+    width: 50%;
+  }
+
+  .col-7-sm {
+    flex-grow: 0;
+    width: 58.3333333333%;
+  }
+
+  .col-8-sm {
+    flex-grow: 0;
+    width: 66.6666666667%;
+  }
+
+  .col-9-sm {
+    flex-grow: 0;
+    width: 75%;
+  }
+
+  .col-10-sm {
+    flex-grow: 0;
+    width: 83.3333333333%;
+  }
+
+  .col-11-sm {
+    flex-grow: 0;
+    width: 91.6666666667%;
+  }
+
+  .col-12-sm {
+    flex-grow: 0;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .col-1-sm {
+    flex-grow: 0;
+    width: 8.3333333333%;
+  }
+
+  .col-2-sm {
+    flex-grow: 0;
+    width: 16.6666666667%;
+  }
+
+  .col-3-sm {
+    flex-grow: 0;
+    width: 25%;
+  }
+
+  .col-4-sm {
+    flex-grow: 0;
+    width: 33.3333333333%;
+  }
+
+  .col-5-sm {
+    flex-grow: 0;
+    width: 41.6666666667%;
+  }
+
+  .col-6-sm {
+    flex-grow: 0;
+    width: 50%;
+  }
+
+  .col-7-sm {
+    flex-grow: 0;
+    width: 58.3333333333%;
+  }
+
+  .col-8-sm {
+    flex-grow: 0;
+    width: 66.6666666667%;
+  }
+
+  .col-9-sm {
+    flex-grow: 0;
+    width: 75%;
+  }
+
+  .col-10-sm {
+    flex-grow: 0;
+    width: 83.3333333333%;
+  }
+
+  .col-11-sm {
+    flex-grow: 0;
+    width: 91.6666666667%;
+  }
+
+  .col-12-sm {
+    flex-grow: 0;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1440px) {
+  .col-1-sm {
+    flex-grow: 0;
+    width: 8.3333333333%;
+  }
+
+  .col-2-sm {
+    flex-grow: 0;
+    width: 16.6666666667%;
+  }
+
+  .col-3-sm {
+    flex-grow: 0;
+    width: 25%;
+  }
+
+  .col-4-sm {
+    flex-grow: 0;
+    width: 33.3333333333%;
+  }
+
+  .col-5-sm {
+    flex-grow: 0;
+    width: 41.6666666667%;
+  }
+
+  .col-6-sm {
+    flex-grow: 0;
+    width: 50%;
+  }
+
+  .col-7-sm {
+    flex-grow: 0;
+    width: 58.3333333333%;
+  }
+
+  .col-8-sm {
+    flex-grow: 0;
+    width: 66.6666666667%;
+  }
+
+  .col-9-sm {
+    flex-grow: 0;
+    width: 75%;
+  }
+
+  .col-10-sm {
+    flex-grow: 0;
+    width: 83.3333333333%;
+  }
+
+  .col-11-sm {
+    flex-grow: 0;
+    width: 91.6666666667%;
+  }
+
+  .col-12-sm {
+    flex-grow: 0;
+    width: 100%;
+  }
+}
+
+.p-0 {
+  padding: 0;
+}
+
+.p-1 {
+  padding: 0.75rem;
+}
+
+.p-2 {
+  padding: 1.5rem;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.p-4 {
+  padding: 4.5rem;
+}
+
+.p-5 {
+  padding: 6rem;
+}
+
+.pl-0 {
+  padding-left: 0;
+}
+
+.pl-1 {
+  padding-left: 0.75rem;
+}
+
+.pl-2 {
+  padding-left: 1.5rem;
+}
+
+.pl-3 {
+  padding-left: 3rem;
+}
+
+.pl-4 {
+  padding-left: 4.5rem;
+}
+
+.pl-5 {
+  padding-left: 6rem;
+}
+
+.pr-0 {
+  padding-right: 0;
+}
+
+.pr-1 {
+  padding-right: 0.75rem;
+}
+
+.pr-2 {
+  padding-right: 1.5rem;
+}
+
+.pr-3 {
+  padding-right: 3rem;
+}
+
+.pr-4 {
+  padding-right: 4.5rem;
+}
+
+.pr-5 {
+  padding-right: 6rem;
+}
+
+.pt-0 {
+  padding-top: 0;
+}
+
+.pt-1 {
+  padding-top: 0.75rem;
+}
+
+.pt-2 {
+  padding-top: 1.5rem;
+}
+
+.pt-3 {
+  padding-top: 3rem;
+}
+
+.pt-4 {
+  padding-top: 4.5rem;
+}
+
+.pt-5 {
+  padding-top: 6rem;
+}
+
+.pb-0 {
+  padding-bottom: 0;
+}
+
+.pb-1 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-2 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 3rem;
+}
+
+.pb-4 {
+  padding-bottom: 4.5rem;
+}
+
+.pb-5 {
+  padding-bottom: 6rem;
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.m-1 {
+  margin: 0.75rem;
+}
+
+.m-2 {
+  margin: 1.5rem;
+}
+
+.m-3 {
+  margin: 3rem;
+}
+
+.m-4 {
+  margin: 4.5rem;
+}
+
+.m-5 {
+  margin: 6rem;
+}
+
+.ml-0 {
+  margin-left: 0;
+}
+
+.ml-1 {
+  margin-left: 0.75rem;
+}
+
+.ml-2 {
+  margin-left: 1.5rem;
+}
+
+.ml-3 {
+  margin-left: 3rem;
+}
+
+.ml-4 {
+  margin-left: 4.5rem;
+}
+
+.ml-5 {
+  margin-left: 6rem;
+}
+
+.mr-0 {
+  margin-right: 0;
+}
+
+.mr-1 {
+  margin-right: 0.75rem;
+}
+
+.mr-2 {
+  margin-right: 1.5rem;
+}
+
+.mr-3 {
+  margin-right: 3rem;
+}
+
+.mr-4 {
+  margin-right: 4.5rem;
+}
+
+.mr-5 {
+  margin-right: 6rem;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.mt-1 {
+  margin-top: 0.75rem;
+}
+
+.mt-2 {
+  margin-top: 1.5rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.mt-4 {
+  margin-top: 4.5rem;
+}
+
+.mt-5 {
+  margin-top: 6rem;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mb-1 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-2 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mb-4 {
+  margin-bottom: 4.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 6rem;
+}
+
+.o-10 {
+  opacity: 0.1;
+}
+
+.o-20 {
+  opacity: 0.2;
+}
+
+.o-30 {
+  opacity: 0.3;
+}
+
+.o-40 {
+  opacity: 0.4;
+}
+
+.o-50 {
+  opacity: 0.5;
+}
+
+.o-60 {
+  opacity: 0.6;
+}
+
+.o-70 {
+  opacity: 0.7;
+}
+
+.o-80 {
+  opacity: 0.8;
+}
+
+.o-90 {
+  opacity: 0.9;
+}
+
+.o-100 {
+  opacity: 1;
+}
+
+.br {
+  border-radius: 2rem;
+}
+
+.br-none {
+  border-radius: 0;
+}
+
+.br-sm {
+  border-radius: 1rem;
+}
+
+.br-lg {
+  border-radius: 4rem;
+}
+
+.display-f {
+  display: flex;
+}
+
+.font-sm {
+  font-size: 0.75rem;
+}
+
+.font-md {
+  font-size: 1rem;
+}
+
+.font-lg {
+  font-size: 1.6rem;
+}
+
+.font-xl {
+  font-size: 2.5rem;
+}
+
+.font-xxl {
+  font-size: 3rem;
+}
+
+.font-100 {
+  font-weight: 100;
+}
+
+.font-200 {
+  font-weight: 200;
+}
+
+.font-300 {
+  font-weight: 300;
+}
+
+.font-400 {
+  font-weight: 400;
+}
+
+.font-500 {
+  font-weight: 500;
+}
+
+.font-600 {
+  font-weight: 600;
+}
+
+.font-700 {
+  font-weight: 700;
+}
+
+.font-800 {
+  font-weight: 800;
+}
+
+.font-900 {
+  font-weight: 900;
+}
+
+.button {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
+}
+
+.input {
+  outline: none;
+  border: none;
 }
