--- a/sass/abstracts/_base.scss
+++ b/sass/abstracts/_base.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&display=swap");
 * {
 	padding: 0;
 	margin: 0;
@@ -6,6 +7,8 @@
 
 html {
 	font-size: 10px;
+	line-height: 1.7;
+	font-family: "Be Vietnam Pro", sans-serif;
 }
 
 li {
@@ -14,6 +17,7 @@ li {
 
 a {
 	text-decoration: none;
+	transition: all 0.2s ease;
 }
 
 img {
