--- a/stylux/abstracts/_variables.scss
+++ b/stylux/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // theme colors
-$base-primary: #f25f3a !default;
-$base-secondary: #242d52 !default;
+$base-primary: #326dee !default;
+$base-secondary: #1ac886 !default;
 $error: #d32752 !default;
 $info: #f6c31c !default;
 
