--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&display=swap");
+html {
+  background-color: #fafafa;
+  overflow-x: hidden;
+}
 
 .font-900 {
   font-weight: 900;
@@ -14,6 +18,10 @@ html {
   font-size: 10px;
   line-height: 1.7;
   font-family: "Be Vietnam Pro", sans-serif;
+}
+
+li {
+  list-style: none;
 }
 
 a {
@@ -103,6 +111,14 @@ img {
   background-color: #f68f75;
 }
 
+.text-hover-primary-light-4:hover {
+  color: #f79f89;
+}
+
+.text-hover-primary-dark-1:hover {
+  color: #da5634;
+}
+
 .text-secondary {
   color: #242d52;
 }
@@ -119,17 +135,9 @@ img {
   background-color: white;
 }
 
-.button {
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
-}
-
 .input {
   outline: none;
   border: none;
-}
-
-.p-1 {
-  padding: 0.75rem;
 }
 
 .p-4 {
@@ -188,6 +196,10 @@ img {
   margin-right: 0.75rem;
 }
 
+.mt-1 {
+  margin-top: 0.75rem;
+}
+
 .mt-2 {
   margin-top: 1.5rem;
 }
@@ -204,8 +216,20 @@ img {
   margin-top: 6rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-3 {
   margin-bottom: 3rem;
+}
+
+.mb-4 {
+  margin-bottom: 4.5rem;
+}
+
+.o-50 {
+  opacity: 0.5;
 }
 
 .o-60 {
@@ -238,4 +262,162 @@ img {
 
 .font-xxl {
   font-size: 3rem;
+}
+
+.bg-mobile {
+  position: relative;
+}
+.bg-mobile svg {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.fill-icon > path {
+  transition: all 0.2s ease;
+}
+
+.fill-icon:hover > path {
+  fill: #f25f3a;
+}
+
+.opacity {
+  transition: all 0.2s ease;
+}
+
+.opacity:hover {
+  opacity: 0.7;
+}
+
+.shadow {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
+}
+
+.navbar-menu {
+  background-color: #fafafa;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  transform: translateX(-100%);
+  transition: 0.5s;
+}
+
+.navbar-menu.active {
+  transform: translateX(0);
+  transition: 0.5s;
+}
+
+.navbar-menu .menu-listing {
+  padding: 0;
+  margin: 0;
+  text-align: right;
+}
+
+.menu-listing li {
+  display: inline-block;
+}
+
+.menu-listing li a {
+  background-color: #fff;
+  color: #262626;
+  display: block;
+  font-size: 1.6rem;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 20px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.menu-listing li a:hover {
+  background-color: #f25f3a;
+  color: #fff;
+  transition: 0.5s;
+}
+
+.menu {
+  cursor: pointer;
+  transition: 0.3s;
+  z-index: 9999;
+}
+
+@media only screen and (max-width: 1023px) {
+  .navbar-menu {
+    height: auto;
+    z-index: 1;
+  }
+
+  .menu-listing li {
+    display: block;
+  }
+
+  .navbar-menu .menu-listing {
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .menu {
+    display: none;
+  }
+
+  .navbar-menu {
+    position: relative;
+    top: 0;
+    transform: translateX(0);
+  }
+
+  .menu-listing li a {
+    background: inherit;
+    color: #262626;
+    display: block;
+    font-size: 1.6rem;
+    letter-spacing: 1px;
+    transition: 0.2s ease;
+  }
+
+  .menu-listing li a:hover {
+    background: inherit;
+    color: #242d52;
+    opacity: 0.5;
+  }
+}
+.img-slide img {
+  margin: 0 auto;
+  width: 60px;
+}
+
+.text-slide {
+  width: min(90%, 400px);
+  margin: 0 auto;
+}
+
+.slick-dots {
+  margin-top: 1.125rem;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+.slick-dots li {
+  margin: 0 0.25rem;
+}
+
+.dots {
+  cursor: pointer;
+  background-color: inherit;
+  margin-top: 1rem;
+  width: 12px;
+  height: 12px;
+  border: 2px solid #f25f3a;
+  border-radius: 100%;
+}
+.dots:active {
+  background-color: #f25f3a;
 }
