--- a/stylux/abstracts/_variables.scss
+++ b/stylux/abstracts/_variables.scss
@@ -23,8 +23,8 @@ $colors: (
 ) !default;
 
 // spacing
-$base-padding: 0.75rem;
-$base-margin: 0.75rem;
+$base-padding: 0.75rem !default;
+$base-margin: 0.75rem !default;
 
 // borders
 $base-border: 1px;
