--- a/stylux/abstracts/_grid.scss
+++ b/stylux/abstracts/_grid.scss
@@ -78,7 +78,7 @@ $text: center, left, right, end, start;
 
 @include mq(medium) {
 	@for $i from 1 through $grid-columns {
-		.col-#{$i}-sm {
+		.col-#{$i}-md {
 			flex-grow: 0;
 			width: math.div($i * 100%, $grid-columns);
 		}
@@ -87,7 +87,7 @@ $text: center, left, right, end, start;
 
 @include mq(large) {
 	@for $i from 1 through $grid-columns {
-		.col-#{$i}-sm {
+		.col-#{$i}-lg {
 			flex-grow: 0;
 			width: math.div($i * 100%, $grid-columns);
 		}
@@ -96,7 +96,7 @@ $text: center, left, right, end, start;
 
 @include mq(xxl) {
 	@for $i from 1 through $grid-columns {
-		.col-#{$i}-sm {
+		.col-#{$i}-xxl {
 			flex-grow: 0;
 			width: math.div($i * 100%, $grid-columns);
 		}
