--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,10 @@ img {
   background-color: white;
 }
 
+.button {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
+}
+
 .input {
   outline: none;
   border: none;
@@ -615,6 +619,17 @@ img {
     flex-direction: row;
     align-items: flex-start;
   }
+}
+
+.footer__inbox .input {
+  color: black;
+  margin-right: 10px;
+}
+
+.footer__inbox button {
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 .footer-bg {
