--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -75,6 +75,17 @@
 	}
 }
 
+.footer__inbox .input {
+	color: black;
+	margin-right: 10px;
+}
+
+.footer__inbox button {
+	outline: none;
+	border: none;
+	cursor: pointer;
+}
+
 .footer-bg {
 	background-color: hsl(233, 12%, 13%);
 }
